# LawMCP

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/law_mcp/: __init__.py  __main__.py  cache.py  eurlex.py  formatting.py  isap.py  query.py  saos.py  sejm.py  server.py
tests/: conftest.py  test_cache.py  test_eurlex.py  test_formatting.py  test_isap.py  test_query.py  test_saos.py  test_sejm.py  test_server.py
