[project]
name = "law-mcp"
version = "0.1.0"
description = "MCP server for Polish and EU legal databases (ISAP, SAOS, EUR-Lex, Sejm API)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ItsRaelx" }]
keywords = ["mcp", "law", "legal", "poland", "eu", "saos", "isap", "eli", "eurlex", "sejm", "cjeu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
law-mcp = "law_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/law_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
